# FaceDetectionAgent

./: FILE_INDEX.md  README.md  app.py  config.py  mcp_server.py  mcp_server1.py  pyproject.toml  pytest.ini  test_bounding_box.py  test_face_match.py  test_tools.py
face_identifier_agent/: agent copy.py  agent.py  prompt.py  prompt1.py  prompt2.py
face_recognition/: __init__.py  camera.py  draw_bounding_box_on_image.py  face_detector.py  face_identifier copy.py  face_identifier.py  face_matcher.py  fetch_image.py  greet.py  utils.py
tests/: __init__.py  test_face_matcher.py  test_mcp_server.py
